...
    <item
        android:id="@+id/job_page"
        android:enabled="true"
        android:icon="@drawable/job_icon"
        android:title="My Jobs"/>
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="Profile"/>
</menu>
