...
    <string-array name="profile_listview">
        <item>Setting</item>
        <item>Bookmark</item>
        <item>Help</item>
    </string-array>

    <string name="text_enter_name"></string>

    <string-array name="label_array">
        <item>Accounting</item>
        <item>Desain Grafis</item>
        <item>Front End</item>
        <item>Back End</item>
...
