<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragpass"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotpassFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <ImageView
            android:layout_marginTop="50dp"
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icons8_lock_100" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Forgot Password ?"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/basic_regular"
            />

        <TextView
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_gravity="center"
            android:layout_width="242dp"
            android:layout_height="33dp"
            android:fontFamily="@font/basic_regular"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:freezesText="true"
            android:gravity="center_horizontal"
            android:text="We just need your registered email address to send you password reset"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="#00000000"
            android:hint="Email Address"
            android:textColorHint="@color/light_grey"
            app:startIconDrawable="@drawable/mail_icon"
            app:startIconContentDescription="Email Address"
            app:endIconMode="clear_text"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailFP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/basic_regular"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetPass"
            android:layout_gravity="center"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="Reset Password"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="Don't Have an Account?"
                android:textColor="@color/black"
                android:fontFamily="@font/basic_regular"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btn_regis_forgotpass"
                android:layout_below="@id/textView9"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="REGISTER"
                android:textColor="@color/blue"
                android:fontFamily="@font/basic_regular"
                />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>