...
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic_regular"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/forgots"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/basic_regular"
                    android:letterSpacing="0"
...
