<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_profiile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                    android:text="Darwin Chandra"
                    android:padding="5dp"
                    android:textSize="22dp"
                    android:fontFamily="@font/basic_regular"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/btn_manage_profil"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0"
                    android:layout_height="wrap_content"
                    android:text="Manage Your Profile"
                    android:textColor="@color/blue"
                    android:background="@android:color/transparent"
...
